infra/k8s/admission-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3000'
        prometheus.io/path: '/metrics'
      labels:
        app: admission
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: admission
          image: toxiczeina/admission
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ['sh', '-c', 'sleep 5']

---
apiVersion: v1
kind: Service
metadata:
  name: admission-srv
spec:
  selector:
    app: admission
  ports:
    - name: admission
      protocol: TCP
      port: 3000
      targetPort: 3000
